--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         <h2 class="section-title">About Me</h2>
         <p style="color: var(--text-muted); max-width: 700px;">
             I am a first-year student at the Faculty of Computers and Information Technology, Helwan National University. 
-            My passion lies in "Gap Development"—working in the spaces between pure software and physical hardware. 
+            My passion lies in "Creative Development"—working in the spaces between pure software and physical hardware. 
             Whether it's creating custom game logic in Unity or soldering a new sensor onto an Arduino board, 
             I love the process of engineering solutions.
         </p>
@@ -279,7 +279,7 @@
     <section id="skills" class="section">
         <h2 class="section-title">Tech Arsenal</h2>
         <div class="skills-grid">
-            <div class="skill-tag"><i class="fab fa-cuttlefish"></i> C / C++</div>
+            <div class="skill-tag"><i class="fab fa-cuttlefish"></i> C# / C++</div>
             <div class="skill-tag"><i class="fab fa-python"></i> Python</div>
             <div class="skill-tag"><i class="fas fa-microchip"></i> Arduino</div>
             <div class="skill-tag"><i class="fab fa-unity"></i> Unity Engine</div>
@@ -331,15 +331,15 @@
         <p style="color: var(--text-muted); margin-bottom: 2rem;">
             Currently open for collaborations and internships.
         </p>
-        <a href="mailto:your-email@example.com" class="btn">Send an Email</a>
+        <a href="mailto:ahmd9988775@gmail.com" class="btn">Send an Email</a>
     </section>
 
     <footer>
         <div class="social-links">
-            <a href="https://github.com/YOUR_USERNAME"><i class="fab fa-github"></i></a>
-            <a href="https://linkedin.com/in/YOUR_USERNAME"><i class="fab fa-linkedin"></i></a>
-            <a href="https://twitter.com/YOUR_USERNAME"><i class="fab fa-twitter"></i></a>
-            <a href="https://facebook.com/YOUR_USERNAME"><i class="fab fa-facebook"></i></a>
+            <a href="https://github.com/ahmed9-Ctrl"><i class="fab fa-github"></i></a>
+            <a href="https://linkedin.com/in/ahmd-amr-59a284272"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/ahmd_alsaude/"><i class="fab fa-instagram"></i></a>
+            <a href="https://facebook.com/ahmad.omda.9277"><i class="fab fa-facebook"></i></a>
         </div>
         <p style="margin-top: 1rem; color: var(--text-muted); font-size: 0.8rem;">
             © 2025 ahmed amr || ALsaude. Built with code & creativity.
@@ -349,3 +349,4 @@
 </body>
 
 </html>
+
