Enhance HTML structure and add smooth scrolling
Added smooth scrolling behavior and improved styling for various sections.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ahmed amr || ALsaude | CS Student & Developer</title>
     <style>
+        html {
+            scroll-behavior: smooth;
+        }
         /* --- RESET & CORE VARIABLES --- */
         :root {
             --bg-dark: #050a14; /* Very dark blue/black */
@@ -349,4 +352,5 @@
 </body>
 
 </html>
+
 
