--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
             Open for collaborations, internships, and discussions.
         </p>
         
-        <a href="mailto:your-email@example.com" class="btn">
+        <a href="mailto:ahmd9988775@gmail.com" class="btn">
             <i class="fas fa-paper-plane" style="margin-right: 8px;"></i> Email Me
         </a>
 
@@ -633,3 +633,4 @@
 
 </body>
 </html>
+
